# QLSyntaxHighlight

./: .gitignore  README.md  build-rust-xcode.sh  post_build_install.patch
QLSyntaxHighlight/: GeneratePreviewForURL.m  Info.plist  main.c
QLSyntaxHighlight.xcodeproj/: project.pbxproj
QLSyntaxHighlight.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
qlhighlight/: Cargo.toml
qlhighlight/res/: Xcodelike.tmTheme
qlhighlight/src/: highlight.rs  lib.rs  qlhighlight.h  quicklook.rs  util.rs
