[package]
name = "qlhighlight"
version = "0.1.0"
authors = ["Bastian Rinsche <bastian.rinsche@gmail.com>"]
edition = "2018"

[lib]
name = "qlhighlight"
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.5"
core-foundation-sys = "0.5"
hexplay = { git = "https://github.com/Memorion/hexplay.git", branch = "html-hack" }
syntect = "2"
plist = { version = "0.2", default-features = false }

[profile.release]
lto = true
