[package]
name = "qlhighlight"
version = "0.1.0"
authors = ["Bastian Rinsche <bastian.rinsche@gmail.com>"]
edition = "2018"

[lib]
name = "qlhighlight"
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.6"
hexplay = { git = "https://github.com/Memorion/hexplay.git", branch = "html-hack" }
syntect = "3.2"
plist = { version = "0.4", default-features = false }

[profile.release]
lto = true
